# vant-project

./: CMakeLists.txt  README.md
include/: initialization.h  registration.h  session.h  vanet.h  verification.h  zk_snark.h
scripts/: setup_dependencies.sh
src/: initialization.cpp  main.cpp  registration.cpp  session.cpp  session_key.cpp  verification.cpp  zk_snark.cpp
